# Fizz

./: .clang-tidy  .gitignore  .gitpod.yml  CMakeLists.txt  Fizz.code-workspace  Fizz.pro  Fizz_en_PK.ts  README.md  build.sh  requirements.txt
TODO/: future_tasks.md
build-Fizz-Desktop-Debug/: .qmake.stash  Fizz
cmake/: README.md  clang-cxx-dev-tools.cmake
docs/: Doxyfile  FizzDocs  README.md
docs/docs/html/: annotated.html  classes.html  dir_3f615ade772d23cefe5e20dcb18424a2.html  dir_654fa84e69ce24e2f1c127f154eeb7c2.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  index.html  structqt__meta__stringdata___main_window__t-members.html  structqt__meta__stringdata___main_window__t.html
docs/docs/html/search/: all_0.js  classes_0.js  searchdata.js
docs/docs/latex/: annotated.tex  refman.tex  structqt__meta__stringdata___main_window__t.tex
img/: README.md
include/: mainwindow.h  mainwindow.ui  standardHeaders.h
include/dashboard/: systemInfo.h
interface/: README.md  mainwindow.ui
misc/: README.md  native_cpuid.cpp
misc/progress/: progress.tex
resources/: README.md
resources/qml/dashboard/: Cell.qml  Test.qml
resources/qrcFiles/: main.qml  style.qrc  style.rcc
resources/qrcFiles/text/: text.txt
resources/stylesheets/dashboard/html/: template.html
resources/stylesheets/graphs/css/: template.qss
resources/stylesheets/processes/html/: template.html
resources/views/: template.html
resources/views/dashboard/css/: dashboard.min.css  network.min.css
resources/views/dashboard/html/: networkDetails.html  networkDownload.html  networkUpload.html  systemInfo.html  usageInfo.html
resources/views/dashboard/sass/: dashboard.scss  network.scss
src/: main.cpp  mainStarter.cpp  mainwindow.cpp
src/backend/: main.qml  mainwindow.cpp  qml.qrc
src/dashboard/: networks.cpp  systemInfo.cpp  usage.cpp
tasks/: CMakeLists.txt  README.md  testTask.sh  testing.cpp
tasks/classes/: hardwareInfo.cpp  helperFuncs.hpp  kernelInfo.cpp  systemInfoClasses.hpp
tasks/dashboard/: details.md
tasks/dashboard/include/: networks.hpp  systemInfo.hpp  usage.hpp
tasks/dashboard/src/: dashboard.cpp  systemInfo.cpp
tasks/includes/: hardwareInfo.cpp  systemInfoClasses.hpp
tasks/processes/: details.md
tasks/resources/: details.md
tasks/services/: details.md
test/: CMakeLists.txt  README.md
test/include/: ExampleTest.hpp
test/src/: ExampleTest.cpp
todo/: Research.md  current_tasks.md  future_tasks.md
ts_files/: testing_with_cmake_en_001.ts
